# src/backend/joanie/tests/swagger/swagger.json
@@ -2441,6 +2441,52 @@
                 }
             }
         },
+        "/api/v1.0/events/": {
+            "get": {
+                "operationId": "events_list",
+                "description": "Event ViewSet",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "required": false,
+                        "in": "query",
+                        "description": "A page number within the paginated result set.",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "page_size",
+                        "required": false,
+                        "in": "query",
+                        "description": "Number of results to return per page.",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "tags": [
+                    "events"
+                ],
+                "security": [
+                    {
+                        "DelegatedJWTAuthentication": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PaginatedEventList"
+                                }
+                            }
+                        },
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/v1.0/orders/": {
             "get": {
                 "operationId": "orders_list",
@@ -5246,6 +5292,42 @@
                     "details"
                 ]
             },
+            "Event": {
+                "type": "object",
+                "description": "Serializer for Event model",
+                "properties": {
+                    "id": {
+                        "type": "string",
+                        "format": "uuid",
+                        "readOnly": true,
+                        "description": "primary key for the record as UUID"
+                    },
+                    "message": {
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "level": {
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "read": {
+                        "type": "boolean",
+                        "readOnly": true
+                    },
+                    "created_on": {
+                        "type": "string",
+                        "format": "date-time",
+                        "readOnly": true
+                    }
+                },
+                "required": [
+                    "created_on",
+                    "id",
+                    "level",
+                    "message",
+                    "read"
+                ]
+            },
             "LanguageEnum": {
                 "enum": [
                     "en-us",
@@ -6101,6 +6183,33 @@
                         "type": "array",
                         "items": {
                             "$ref": "#/components/schemas/Enrollment"
+                        }
+                    }
+                }
+            },
+            "PaginatedEventList": {
+                "type": "object",
+                "properties": {
+                    "count": {
+                        "type": "integer",
+                        "example": 123
+                    },
+                    "next": {
+                        "type": "string",
+                        "nullable": true,
+                        "format": "uri",
+                        "example": "http://api.example.org/accounts/?page=4"
+                    },
+                    "previous": {
+                        "type": "string",
+                        "nullable": true,
+                        "format": "uri",
+                        "example": "http://api.example.org/accounts/?page=2"
+                    },
+                    "results": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Event"
                         }
                     }
                 }
